--- a/style.css
+++ b/style.css
@@ -5,17 +5,10 @@
    font-family: 'Inter';
    text-decoration: none;
    background: #E5E5E5;
-   /* 
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 150%; 
-    */
 }
 
 body{
     height: 100%;
-
-
 }
 
 img{
@@ -38,16 +31,12 @@ header .logo{
 main{
     width: 100%;
     height: 90%;
-    justify-content: space-between;
-    
-
-
+    justify-content: space-between;  
     display: flex;
     flex-direction: row;
     background: no-repeat;
     background-size: cover;
-    background-position: center;
-    
+    background-position: center;    
 }
 
 
@@ -67,9 +56,7 @@ main{
     border: 1px solid #C5C5C5;
     color: #0A3871;
     border-radius: 15px;
-    resize: none;
-   
-    /*text-transform: lowercase; */
+    resize: none;    
 }
 
 .text-area::placeholder, :focus{
@@ -92,12 +79,9 @@ main{
     font-style: normal;
     font-weight: 400;    
     font-size: 18px;
-    /*line-height: 150px;*/
     opacity: 0.8;
     color: #495057;
-    line-height: 18px;
-
-   
+    line-height: 18px;   
 }
 
 
@@ -112,8 +96,6 @@ main{
     width: 680px;
     justify-content: space-between;
 }
-
-
 
 
 .btn-encriptar{
@@ -175,10 +157,7 @@ main{
     box-shadow: 0px 20px 29px -5px blue;
 
     */
-
-
 }
-
 
 
 .mensaje{
@@ -188,25 +167,9 @@ main{
     box-shadow: 10px 24px 32px -8px #343A40;
     position: relative;
     margin-top: 40px;
-
     margin-right: 40px;
-
-
-
     border-radius: 32px;
-    text-align: center;
-
-   /*
-    background: white;   
-    background-repeat: no-repeat;
-    border: none;
-    border-radius: 24px;
-    color: #0A3871;
-    margin-left: 98px;
-    margin-top: 20px;
-    padding-left: 20px;
-    position: fixed;
-    */
+    text-align: center;   
 }
   
 .mensaje-contenedor{
@@ -266,7 +229,6 @@ main{
     outline: none;
 }
 
-
 .copiar{
     width: 336px;
     height: 67px;
@@ -299,8 +261,6 @@ main{
     top: 650px;
     */
 }
-
-
 
 
 /* Media */
@@ -384,6 +344,7 @@ main{
     .botones{
         display: grid;
         gap: 21px;
+        
     }
 
     .mensaje{
@@ -392,40 +353,36 @@ main{
 
 }
 
-@media(max-width:375px){
-
-
+@media(max-width:480px){
+ 
     header .logo{
         width: 100%;
         background: #E5E5E5;
         padding: 2px;
     }
-
+ 
     .text-area{
         width: 80%;
-        font-size: 24px;
-        align-items: center;
+        font-size: 18px;
+        height: 120px;
+        margin-left: 5px;
     }
-
-
-    /*cambio botone*/
+ 
     .botones{
-          display: flex;
-          flex-flow: column;
-          
-        
-    }
-
-    .mensaje{
-        margin-left: 30px;
-        justify-content: space-between;
+        display: flex;
+        flex-direction: column;
         align-items: center;
-        
+        margin-right: 5px;
+        width: 343px;
+        height: 158px;
+       
     }
-
-    body{
-        width: 375px;
-        height: 933px;
+ 
+    .mensaje{
+        width: 90%;
+        margin-left: 25px;
+        justify-content: center;
+        align-items: center;
     }
-
 }
+
